--- a/actividad-3.html
+++ b/actividad-3.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "actividad-3.css"], "outOfDate":[]};
 </script>
   
-  <title>Inicio</title>
+  <title>Actividad 3</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4238303302"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=256541689" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=33467170" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,30 +37,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="clearfix colelem" id="pu1871-30"><!-- group -->
-        <div class="clearfix grpelem" id="u1871-30"><!-- content -->
-         <p>&nbsp;</p>
-         <p id="u1871-3"><span class="T-tulos" id="u1871-2">Conexión Bases de Datos con PHP</span></p>
-         <p>&nbsp;</p>
-         <p id="u1871-6"><span class="contenido" id="u1871-5">Sean bienvenidos estimados estudiantes, en el presente OVI trataremos los principales temas sobre como realizar las conexiones&nbsp; a la BD empleando PHP y otras herramientas que se irán nombrando en las siguiente secciones del OVI.</span></p>
-         <p id="u1871-7">&nbsp;</p>
-         <p id="u1871-9"><span class="T-tulos" id="u1871-8">Objetivo General</span></p>
-         <p id="u1871-10">&nbsp;</p>
-         <p id="u1871-12"><span class="contenido" id="u1871-11">Mostrar la utilidad de conectar una BD de datos con PHP.</span></p>
-         <p id="u1871-13">&nbsp;</p>
-         <p id="u1871-15"><span class="T-tulos" id="u1871-14">Objetivos Específicos</span></p>
-         <p id="u1871-16">&nbsp;</p>
-         <p id="u1871-18"><span class="contenido" id="u1871-17">Orientar al estudiante sobre las diferentes consultas en la BD que se pueden hacer a través de la página web.</span></p>
-         <p id="u1871-20"><span class="contenido" id="u1871-19">Orientar al estudiante sobre las modificaciones de los registros en la BD a través de la página web.</span></p>
-         <p id="u1871-22"><span class="contenido" id="u1871-21">Orientar al estudiante sobre el borrado de registros en la BD de datos sin alterar la información.</span></p>
-         <p id="u1871-23">&nbsp;</p>
-         <p id="u1871-25"><span class="T-tulos" id="u1871-24">Contenidos:</span></p>
-         <p id="u1871-26">&nbsp;</p>
-         <p id="u1871-28"><span class="contenido" id="u1871-27">En las siguiente secciones tendremos lecturas que les ayudarán durante el desarrollo de las actividades, como también se presentarán ayudas en formatos de vídeo, con el objetivo de brindarles las herramientas necesarias para abordar las temáticas del curso y puedan llegar a desarrollar todas las actividades propuestas.</span></p>
-        </div>
-        <div class="grpelem" id="u1731"><!-- custom html -->
-         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+       <div class="colelem" id="u1731"><!-- custom html -->
+        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
        </div>
       </div>
      </div>
@@ -70,7 +48,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix" id="u1023_align_to_page">
        <nav class="MenuBar clearfix grpelem" id="menuu1024"><!-- horizontal box -->
         <div class="MenuItemContainer clearfix grpelem" id="u1025"><!-- vertical box -->
-         <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1026" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1027-4"><!-- content --><p>INICIO</p></div></a>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1026" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1027-4"><!-- content --><p>INICIO</p></div></a>
         </div>
         <div class="MenuItemContainer clearfix grpelem" id="u1067"><!-- vertical box -->
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1068" href="lecturas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1071-4"><!-- content --><p>Lecturas</p></div><div class="grpelem" id="u1070"><!-- content --></div></a>
@@ -114,7 +92,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="768" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
