--- a/lectura-4.html
+++ b/lectura-4.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "actividad-3.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "jquery.musepolyfill.bgsize.js", "lectura-4.css"], "outOfDate":[]};
 </script>
   
-  <title>Actividad 3</title>
+  <title>Lectura 4</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/lectura-4.css?crc=3870300123" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -57,7 +57,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096" href="lectura-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082" href="lectura-5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></a></li>
           </ul>
          </div>
@@ -91,8 +91,63 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="clearfix grpelem" id="u2201-33"><!-- content -->
+     <p>&nbsp;</p>
+     <p id="u2201-3"><span class="T-tulos" id="u2201-2">Lenguaje SQL</span></p>
+     <p id="u2201-4">&nbsp;</p>
+     <p id="u2201-6"><span class="contenido" id="u2201-5">SQL (Structured Query Language) es un lenguaje que es utilizado para la comunicación con las bases de datos empleando una serie de comandos los mas habituales son SELECT, INSERT, UPDATE, DELETE, adicional facilita realizar operaciones en las mismas consultas.</span></p>
+     <p id="u2201-7">&nbsp;</p>
+     <p id="u2201-9"><span class="subtitulos" id="u2201-8">Comunicación con la BD</span></p>
+     <p id="u2201-10">&nbsp;</p>
+     <p id="u2201-11">&nbsp;</p>
+     <p id="u2201-12">&nbsp;</p>
+     <p id="u2201-13">&nbsp;</p>
+     <p id="u2201-14">&nbsp;</p>
+     <p id="u2201-15">&nbsp;</p>
+     <p id="u2201-16">&nbsp;</p>
+     <p id="u2201-17">&nbsp;</p>
+     <p id="u2201-18">&nbsp;</p>
+     <p id="u2201-19">&nbsp;</p>
+     <p id="u2201-20">&nbsp;</p>
+     <p id="u2201-21">&nbsp;</p>
+     <p id="u2201-22">&nbsp;</p>
+     <p id="u2201-23">&nbsp;</p>
+     <p id="u2201-24">&nbsp;</p>
+     <p id="u2201-25">&nbsp;</p>
+     <p id="u2201-26">&nbsp;</p>
+     <p id="u2201-27">&nbsp;</p>
+     <p id="u2201-29"><span class="subtitulos" id="u2201-28">Ejemplos de Consultas</span></p>
+     <p id="u2201-30">&nbsp;</p>
+     <p id="u2201-31">&nbsp;</p>
+    </div>
+    <div class="museBGSize grpelem" id="u2204"><!-- simple frame --></div>
+    <div class="clearfix grpelem" id="u2215-4"><!-- content -->
+     <p id="u2215-2"><span class="referencia" id="u2215">Imagen 3 Comunicación BD. Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+    </div>
+    <div class="browser_width grpelem" id="u2218-bw">
+     <div id="u2218"><!-- column -->
+      <div class="clearfix" id="u2218_align_to_page">
+       <div class="colelem" id="u2235"><!-- simple frame --></div>
+       <div class="clearfix colelem" id="u2246-4"><!-- content -->
+        <p id="u2246-2"><span class="referencia" id="u2246">Imagen 5 Sentencia Select. Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+       </div>
+       <div class="colelem" id="u2249"><!-- simple frame --></div>
+       <div class="clearfix colelem" id="u2260-4"><!-- content -->
+        <p id="u2260-2"><span class="referencia" id="u2260">Imagen 6 Sentencia Update. Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+       </div>
+       <div class="colelem" id="u2263"><!-- simple frame --></div>
+       <div class="clearfix colelem" id="u2274-4"><!-- content -->
+        <p id="u2274-2"><span class="referencia" id="u2274">Imagen 7 Sentencia Delete.&nbsp; Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="grpelem" id="u2221"><!-- simple frame --></div>
+    <div class="clearfix grpelem" id="u2232-4"><!-- content -->
+     <p id="u2232-2"><span class="referencia" id="u2232">Imagen 4 Sentencia Insert.&nbsp; Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="1741" data-content-above-spacer="1741" data-content-below-spacer="116"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
@@ -127,7 +182,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu","jquery.musepolyfill.bgsize"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
