--- a/autores.html
+++ b/autores.html
@@ -15,7 +15,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Autores</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4238303302"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
   <link rel="stylesheet" type="text/css" href="css/autores.css?crc=33467170" id="pagesheet"/>
   <!-- JS includes -->
@@ -54,11 +54,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1068" href="lecturas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1071-4"><!-- content --><p>Lecturas</p></div><div class="grpelem" id="u1070"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1072"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1073"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096" href="lectura-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082" href="lectura-5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></a></li>
           </ul>
          </div>
         </div>
