--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Inicio</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4238303302"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=256541689" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=518552574" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,26 +37,26 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="clearfix colelem" id="pu1871-30"><!-- group -->
-        <div class="clearfix grpelem" id="u1871-30"><!-- content -->
+       <div class="clearfix colelem" id="pu1964-30"><!-- group -->
+        <div class="clearfix grpelem" id="u1964-30"><!-- content -->
          <p>&nbsp;</p>
-         <p id="u1871-3"><span class="T-tulos" id="u1871-2">Conexión Bases de Datos con PHP</span></p>
-         <p>&nbsp;</p>
-         <p id="u1871-6"><span class="contenido" id="u1871-5">Sean bienvenidos estimados estudiantes, en el presente OVI trataremos los principales temas sobre como realizar las conexiones&nbsp; a la BD empleando PHP y otras herramientas que se irán nombrando en las siguiente secciones del OVI.</span></p>
-         <p id="u1871-7">&nbsp;</p>
-         <p id="u1871-9"><span class="T-tulos" id="u1871-8">Objetivo General</span></p>
-         <p id="u1871-10">&nbsp;</p>
-         <p id="u1871-12"><span class="contenido" id="u1871-11">Mostrar la utilidad de conectar una BD de datos con PHP.</span></p>
-         <p id="u1871-13">&nbsp;</p>
-         <p id="u1871-15"><span class="T-tulos" id="u1871-14">Objetivos Específicos</span></p>
-         <p id="u1871-16">&nbsp;</p>
-         <p id="u1871-18"><span class="contenido" id="u1871-17">Orientar al estudiante sobre las diferentes consultas en la BD que se pueden hacer a través de la página web.</span></p>
-         <p id="u1871-20"><span class="contenido" id="u1871-19">Orientar al estudiante sobre las modificaciones de los registros en la BD a través de la página web.</span></p>
-         <p id="u1871-22"><span class="contenido" id="u1871-21">Orientar al estudiante sobre el borrado de registros en la BD de datos sin alterar la información.</span></p>
-         <p id="u1871-23">&nbsp;</p>
-         <p id="u1871-25"><span class="T-tulos" id="u1871-24">Contenidos:</span></p>
-         <p id="u1871-26">&nbsp;</p>
-         <p id="u1871-28"><span class="contenido" id="u1871-27">En las siguiente secciones tendremos lecturas que les ayudarán durante el desarrollo de las actividades, como también se presentarán ayudas en formatos de vídeo, con el objetivo de brindarles las herramientas necesarias para abordar las temáticas del curso y puedan llegar a desarrollar todas las actividades propuestas.</span></p>
+         <p id="u1964-3"><span class="T-tulos" id="u1964-2">Conexión Bases de Datos con PHP</span></p>
+         <p id="u1964-4">&nbsp;</p>
+         <p id="u1964-6"><span class="contenido" id="u1964-5">Sean bienvenidos estimados estudiantes, en el presente OVI trataremos los principales temas sobre como realizar las conexiones&nbsp; a la BD empleando PHP y otras herramientas que se irán nombrando en las siguiente secciones del OVI.</span></p>
+         <p id="u1964-7">&nbsp;</p>
+         <p id="u1964-9"><span class="subtitulos" id="u1964-8">Objetivo General</span></p>
+         <p id="u1964-10">&nbsp;</p>
+         <p id="u1964-12"><span class="contenido" id="u1964-11">Mostrar la utilidad de conectar una BD de datos con PHP.</span></p>
+         <p id="u1964-13">&nbsp;</p>
+         <p id="u1964-15"><span class="subtitulos" id="u1964-14">Objetivos Específicos</span></p>
+         <p id="u1964-16">&nbsp;</p>
+         <p id="u1964-18"><span class="contenido" id="u1964-17">Orientar al estudiante sobre las diferentes consultas en la BD que se pueden hacer a través de la página web.</span></p>
+         <p id="u1964-20"><span class="contenido" id="u1964-19">Orientar al estudiante sobre las modificaciones de los registros en la BD a través de la página web.</span></p>
+         <p id="u1964-22"><span class="contenido" id="u1964-21">Orientar al estudiante sobre el borrado de registros en la BD de datos sin alterar la información.</span></p>
+         <p id="u1964-23">&nbsp;</p>
+         <p id="u1964-25"><span class="subtitulos" id="u1964-24">Contenidos:</span></p>
+         <p id="u1964-26">&nbsp;</p>
+         <p id="u1964-28"><span class="contenido" id="u1964-27">En las siguiente secciones tendremos lecturas que les ayudarán durante el desarrollo de las actividades, como también se presentarán ayudas en formatos de vídeo, con el objetivo de brindarles las herramientas necesarias para abordar las temáticas del curso y puedan llegar a desarrollar todas las actividades propuestas.</span></p>
         </div>
         <div class="grpelem" id="u1731"><!-- custom html -->
          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -76,11 +76,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1068" href="lecturas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1071-4"><!-- content --><p>Lecturas</p></div><div class="grpelem" id="u1070"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1072"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1073"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096" href="lectura-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082" href="lectura-5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -114,7 +114,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="768" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="758" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
