--- a/lectura-2.html
+++ b/lectura-2.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "actividad-3.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "lectura-2.css"], "outOfDate":[]};
 </script>
   
-  <title>Actividad 3</title>
+  <title>Lectura 2</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/lectura-2.css?crc=523976952" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +37,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="pu2163-34"><!-- group -->
+        <div class="clearfix grpelem" id="u2163-34"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u2163-3"><span class="T-tulos" id="u2163-2">Instalación y Configuración de MySQL</span></p>
+         <p>&nbsp;</p>
+         <p id="u2163-6"><span class="contenido" id="u2163-5">La instalación de MySQL esta compuesta por algunos pasos previos, que son descargar el aplicativo e iniciar la instalación del mismo.</span></p>
+         <p id="u2163-7">&nbsp;</p>
+         <p id="u2163-9"><span class="subtitulos" id="u2163-8">Previos</span></p>
+         <p id="u2163-10">&nbsp;</p>
+         <p id="u2163-12"><span class="contenido" id="u2163-11">Ingresar al sitio de MySQL, www.mysql.com y descargar la versión mas reciente.</span></p>
+         <p id="u2163-13">&nbsp;</p>
+         <p id="u2163-14">&nbsp;</p>
+         <p id="u2163-17"><span class="subtitulos" id="u2163-15">Configuración: </span><span class="contenido" id="u2163-16">La configuración se hará con la estándar, seleccionar como un servicio de Windows y activar la opción para que arranque con el sistema, por último no olvidar crear la contraseña para el usuario root, la cual es muy importante para trabajar en la base de datos que se cree.</span></p>
+         <p id="u2163-18">&nbsp;</p>
+         <p id="u2163-21"><span class="subtitulos" id="u2163-19">Arrancar: </span><span class="contenido" id="u2163-20">En este paso si ha indicado que arranque con el sistema puede omitirlo, de lo contrario deberá iniciar el arranque ejecutando Instance Config Wizard.</span></p>
+         <p id="u2163-22">&nbsp;</p>
+         <p id="u2163-25"><span class="subtitulos" id="u2163-23">Conectar con el servidor: </span><span class="contenido" id="u2163-24">Este paso lo puede realizar desde la línea de comandos o utilizando un programa que proporcione alguna interfaz gráfica como phpMyAdmin.</span></p>
+         <p id="u2163-26">&nbsp;</p>
+         <p id="u2163-27">&nbsp;</p>
+         <p id="u2163-29"><span class="contenido" id="u2163-28">Por último estimados estudiantes se les invita a revisar las referencias y ampliar los conocimientos sobre este tema, también pueden consultar el siguiente link.</span></p>
+         <p id="u2163-30">&nbsp;</p>
+         <p id="u2163-32"><span class="contenido" id="u2163-31">Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+        </div>
+        <div class="grpelem" id="u1731"><!-- custom html -->
+         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
        </div>
       </div>
      </div>
@@ -55,7 +79,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="SubMenu MenuLevel1 clearfix" id="u1072"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1073"><!-- vertical box -->
            <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096" href="lectura-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></a></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082" href="lectura-5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></a></li>
@@ -92,7 +116,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="815" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
