--- a/lectura-3.html
+++ b/lectura-3.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "actividad-3.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "lectura-3.css"], "outOfDate":[]};
 </script>
   
-  <title>Actividad 3</title>
+  <title>Lectura 3</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/actividad-3.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/lectura-3.css?crc=4243888641" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -30,15 +30,35 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width grpelem" id="u151-bw">
      <div id="u151"><!-- column -->
       <div class="clearfix" id="u151_align_to_page">
-       <div class="clearfix colelem" id="u165"><!-- group -->
-        <div class="grpelem" id="u168"><!-- simple frame --></div>
-        <div class="clearfix grpelem" id="u182-6"><!-- content -->
-         <p>O.V.I CONEXIÓN BASES DE DATOS CON PHP</p>
-         <p>ECBTI</p>
+       <div class="position_content" id="u151_position_content">
+        <div class="clearfix colelem" id="u165"><!-- group -->
+         <div class="grpelem" id="u168"><!-- simple frame --></div>
+         <div class="clearfix grpelem" id="u182-6"><!-- content -->
+          <p>O.V.I CONEXIÓN BASES DE DATOS CON PHP</p>
+          <p>ECBTI</p>
+         </div>
         </div>
-       </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="clearfix colelem" id="pu2169-22"><!-- group -->
+         <div class="clearfix grpelem" id="u2169-22"><!-- content -->
+          <p>&nbsp;</p>
+          <p id="u2169-3"><span class="T-tulos" id="u2169-2">Herramientas de administración phpMyAdmin</span></p>
+          <p>&nbsp;</p>
+          <p id="u2169-6"><span class="contenido" id="u2169-5">phpMyAdmin es una herramienta que permite administrar los servidores de bases de datos de MySQL, es una herramienta muy útil ya que cuenta con una interfaz gráfica que facilita trabajar con ella, esta herramienta ofrece los siguientes servicios.</span></p>
+          <p id="u2169-7">&nbsp;</p>
+          <ul class="list0 nls-None" id="u2169-16">
+           <li id="u2169-9"><span class="contenido" id="u2169-8">Crear, borrar modificar tablas.</span></li>
+           <li id="u2169-11"><span class="contenido" id="u2169-10">Consultar, modificar, insertar y eliminar datos.</span></li>
+           <li id="u2169-13"><span class="contenido" id="u2169-12">Definir usuarios, permisos</span></li>
+           <li id="u2169-15"><span class="contenido" id="u2169-14">Copias de seguridad.</span></li>
+          </ul>
+          <p id="u2169-17">&nbsp;</p>
+          <p id="u2169-19"><span class="contenido" id="u2169-18">Cuenta con su interfaz gráfica que esta hecha en PHP y se accede a ella desde el navegador web.</span></p>
+          <p id="u2169-20">&nbsp;</p>
+         </div>
+         <div class="grpelem" id="u1731"><!-- custom html -->
+          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </div>
+        </div>
        </div>
       </div>
      </div>
@@ -56,7 +76,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <ul class="SubMenuView clearfix colelem" id="u1073"><!-- vertical box -->
            <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096" href="lectura-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
            <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082" href="lectura-5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></a></li>
           </ul>
@@ -91,8 +111,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="browser_width grpelem" id="u2184-bw">
+     <div id="u2184"><!-- simple frame --></div>
+    </div>
+    <div class="grpelem" id="u2187"><!-- simple frame --></div>
+    <div class="clearfix grpelem" id="u2198-4"><!-- content -->
+     <p id="u2198-2"><span class="referencia" id="u2198">Imagen 2 Interfaz phpMyAdmin. Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="1034" data-content-above-spacer="1034" data-content-below-spacer="116"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
