--- a/lecturas.html
+++ b/lecturas.html
@@ -15,9 +15,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Lecturas</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4238303302"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/lecturas.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/lecturas.css?crc=264317214" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +37,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="pu1967-29"><!-- group -->
+        <div class="clearfix grpelem" id="u1967-29"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u1967-3"><span class="T-tulos" id="u1967-2">Lecturas:</span></p>
+         <p id="u1967-4">&nbsp;</p>
+         <p id="u1967-6"><span class="contenido" id="u1967-5">Sean bienvenidos estimados estudiantes, en esta sección vamos a encontrar 5 lecturas referentes al que tema que se viene trabajando, a continuación se detalla el contenido de cada 1 de las lecturas.</span></p>
+         <p id="u1967-7">&nbsp;</p>
+         <p id="u1967-8">&nbsp;</p>
+         <p id="u1967-9">&nbsp;</p>
+         <p id="u1967-12"><span class="subtitulos" id="u1967-10">Lectura 1: </span><span class="contenido" id="u1967-11">Base de datos en la web</span></p>
+         <p id="u1967-15"><span class="subtitulos" id="u1967-13">Lectura 2: </span><span class="contenido" id="u1967-14">Instalación y configuración de MySQL</span></p>
+         <p id="u1967-18"><span class="subtitulos" id="u1967-16">Lectura 3: </span><span class="contenido" id="u1967-17">Herramientas de administración phpMyAdmin</span></p>
+         <p id="u1967-21"><span class="subtitulos" id="u1967-19">Lectura 4: </span><span class="contenido" id="u1967-20">Lenguaje SQL</span></p>
+         <p id="u1967-24"><span class="subtitulos" id="u1967-22">Lectura 5: </span><span class="contenido" id="u1967-23">Funciones de PHP para el acceso a bases de datos.</span></p>
+         <p id="u1967-25">&nbsp;</p>
+         <p id="u1967-26">&nbsp;</p>
+         <p id="u1967-27">&nbsp;</p>
+        </div>
+        <div class="grpelem" id="u1731"><!-- custom html -->
+         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
        </div>
       </div>
      </div>
@@ -54,11 +73,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1068" href="lecturas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1071-4"><!-- content --><p>Lecturas</p></div><div class="grpelem" id="u1070"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1072"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1073"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1095"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1096" href="lectura-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1098-4"><!-- content --><p>Lectura 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1102"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1105" href="lectura-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1107-4"><!-- content --><p>Lectura 2</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1074"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1075" href="lectura-3.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1078-4"><!-- content --><p>Lectura 3</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1088"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1091" href="lectura-4.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1094-4"><!-- content --><p>Lectura 4</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1081"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1082" href="lectura-5.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1085-4"><!-- content --><p>Lectura 5</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -92,7 +111,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="757" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
