--- a/lectura-5.html
+++ b/lectura-5.html
@@ -16,8 +16,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Lectura 5</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/lectura-5.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
+  <link rel="stylesheet" type="text/css" href="css/lectura-5.css?crc=32032636" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +37,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="pu2278-42"><!-- group -->
+        <div class="clearfix grpelem" id="u2278-42"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u2278-3"><span class="T-tulos" id="u2278-2">Funciones de PHP para el acceso a bases de datos</span></p>
+         <p id="u2278-4">&nbsp;</p>
+         <p id="u2278-6"><span class="contenido" id="u2278-5">Las siguientes son algunas de las funciones de PHP para conectarse a la base de datos:</span></p>
+         <p id="u2278-7">&nbsp;</p>
+         <ul class="list0 nls-None" id="u2278-10">
+          <li id="u2278-9"><span class="contenido" id="u2278-8">Conexión con el servidor de bases de datos su sintaxis es:</span></li>
+         </ul>
+         <p id="u2278-12"><span class="contenido" id="u2278-11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &amp;conexion = mysql_connect (servidor, username, password);</span></p>
+         <p id="u2278-13">&nbsp;</p>
+         <ul class="list0 nls-None" id="u2278-16">
+          <li id="u2278-15"><span class="contenido" id="u2278-14">Seleccionar la base de datos su sintaxis es:</span></li>
+         </ul>
+         <p id="u2278-18"><span class="contenido" id="u2278-17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; mysql_select_db (database);</span></p>
+         <p id="u2278-19">&nbsp;</p>
+         <ul class="list0 nls-None" id="u2278-22">
+          <li id="u2278-21"><span class="contenido" id="u2278-20">Enviar instrucciones SQL a la base de datos su sintaxis es:</span></li>
+         </ul>
+         <p id="u2278-24"><span class="contenido" id="u2278-23">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $consulta = mysql_query (instrucción, $conexion);</span></p>
+         <p id="u2278-25">&nbsp;</p>
+         <ul class="list0 nls-None" id="u2278-28">
+          <li id="u2278-27"><span class="contenido" id="u2278-26">Obtención y procesamiento de resultados su sintaxis es:</span></li>
+         </ul>
+         <p id="u2278-30"><span class="contenido" id="u2278-29">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $nfilas = mysql_num_rows ($consulta);</span></p>
+         <p id="u2278-31">&nbsp;</p>
+         <ul class="list0 nls-None" id="u2278-34">
+          <li id="u2278-33"><span class="contenido" id="u2278-32">Cerrar la conexión con el servidor su sintaxis es:</span></li>
+         </ul>
+         <p id="u2278-36"><span class="contenido" id="u2278-35">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; mysql_close ($conexion);</span></p>
+         <p id="u2278-37">&nbsp;</p>
+         <p id="u2278-39"><span class="contenido" id="u2278-38">Por último estimados estudiantes se les invita nuevamente a revisar las referencias bibliográficas con el fin de ampliar estos conocimientos.</span></p>
+         <p id="u2278-40">&nbsp;</p>
+        </div>
+        <div class="grpelem" id="u1731"><!-- custom html -->
+         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
        </div>
       </div>
      </div>
@@ -92,7 +128,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="797" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
