--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Inicio</title>
+  <title>Conexión Base de Datos con PHP</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=518552574" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
