--- a/multimedia.html
+++ b/multimedia.html
@@ -16,8 +16,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Multimedia</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/multimedia.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
+  <link rel="stylesheet" type="text/css" href="css/multimedia.css?crc=3928658834" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +37,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="pu2284-14"><!-- group -->
+        <div class="clearfix grpelem" id="u2284-14"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u2284-3"><span class="T-tulos" id="u2284-2">Multimedia</span></p>
+         <p id="u2284-4">&nbsp;</p>
+         <p id="u2284-6"><span class="contenido" id="u2284-5">Estimados estudiantes en esta sección encontrará 4 vídeos en youtube en donde se ampliarán los conocimientos previos que se adquirieron durante la revisión de las lecturas.</span></p>
+         <p id="u2284-7">&nbsp;</p>
+         <p id="u2284-9"><span class="contenido" id="u2284-8">Los vídeos están relacionados con las diferentes consultas que se hacen sobre una base de datos, consultar, registrar, modificar, eliminar.</span></p>
+         <p id="u2284-10">&nbsp;</p>
+         <p id="u2284-11">&nbsp;</p>
+         <p id="u2284-12">&nbsp;</p>
+        </div>
+        <div class="grpelem" id="u1731"><!-- custom html -->
+         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
        </div>
       </div>
      </div>
@@ -92,7 +105,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="767" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
