--- a/referencias.html
+++ b/referencias.html
@@ -16,8 +16,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Referencias</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/referencias.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
+  <link rel="stylesheet" type="text/css" href="css/referencias.css?crc=18605032" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +37,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="pu2359-26"><!-- group -->
+        <div class="clearfix grpelem" id="u2359-26"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u2359-3"><span class="T-tulos" id="u2359-2">Referencias</span></p>
+         <p id="u2359-4">&nbsp;</p>
+         <p id="u2359-6"><span class="contenido" id="u2359-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MiHolaMundo (2015, junio 2). Como guardar, mostrar, modificar y eliminar datos de MySQL desde php parte 1[Archivo de video]. Recuperado de https://www.youtube.com/watch?v=PVe-Q2w3-WQ</span></p>
+         <p id="u2359-7">&nbsp;</p>
+         <p id="u2359-9"><span class="contenido" id="u2359-8">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MiHolaMundo (2015, junio 2). Como guardar, mostrar, modificar y eliminar datos de MySQL desde php parte 2[Archivo de video]. Recuperado de https://www.youtube.com/watch?v=nstMUcmBfBE</span></p>
+         <p id="u2359-10">&nbsp;</p>
+         <p id="u2359-12"><span class="contenido" id="u2359-11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MiHolaMundo (2015, junio 2). Como guardar, mostrar, modificar y eliminar datos de MySQL desde php parte 3[Archivo de video]. Recuperado de https://www.youtube.com/watch?v=IiMXyvadxiI</span></p>
+         <p id="u2359-13">&nbsp;</p>
+         <p id="u2359-15"><span class="contenido" id="u2359-14">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MiHolaMundo (2015, junio 2). Como guardar, mostrar, modificar y eliminar datos de MySQL desde php parte 4[Archivo de video]. Recuperado de https://www.youtube.com/watch?v=akhhdrbrKDs</span></p>
+         <p id="u2359-16">&nbsp;</p>
+         <p id="u2359-18"><span class="contenido" id="u2359-17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
+         <p id="u2359-19">&nbsp;</p>
+         <p id="u2359-21"><span class="contenido" id="u2359-20">&nbsp;&nbsp; Spona, H. (2010). Programación de bases de datos con MYSQL y PHP. Marcombo. Recuperado de: https://books.google.com.co/books?hl=es&amp;lr=&amp;id=y11L7pQfdRsC&amp;oi=fnd&amp;pg=PA1&amp;dq=modificar+registros+bd+con+php&amp;ots=5yb_mDLXSS&amp;sig=LMs2XZroGaWR951HK9HvDlglmoE&amp;redir_esc=y#v=onepage&amp;q=modificar%20registros%20bd%20con%20php&amp;f=false</span></p>
+         <p id="u2359-22">&nbsp;</p>
+         <p id="u2359-23">&nbsp;</p>
+         <p id="u2359-24">&nbsp;</p>
+        </div>
+        <div class="grpelem" id="u1731"><!-- custom html -->
+         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
        </div>
       </div>
      </div>
@@ -92,7 +113,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="588" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
