--- a/video-1.html
+++ b/video-1.html
@@ -16,8 +16,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Video 1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4250793637"/>
-  <link rel="stylesheet" type="text/css" href="css/video-1.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
+  <link rel="stylesheet" type="text/css" href="css/video-1.css?crc=327123694" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -30,15 +30,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width grpelem" id="u151-bw">
      <div id="u151"><!-- column -->
       <div class="clearfix" id="u151_align_to_page">
-       <div class="clearfix colelem" id="u165"><!-- group -->
-        <div class="grpelem" id="u168"><!-- simple frame --></div>
-        <div class="clearfix grpelem" id="u182-6"><!-- content -->
-         <p>O.V.I CONEXIÓN BASES DE DATOS CON PHP</p>
-         <p>ECBTI</p>
+       <div class="position_content" id="u151_position_content">
+        <div class="clearfix colelem" id="u165"><!-- group -->
+         <div class="grpelem" id="u168"><!-- simple frame --></div>
+         <div class="clearfix grpelem" id="u182-6"><!-- content -->
+          <p>O.V.I CONEXIÓN BASES DE DATOS CON PHP</p>
+          <p>ECBTI</p>
+         </div>
         </div>
-       </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="clearfix colelem" id="pu1731"><!-- group -->
+         <div class="grpelem" id="u1731"><!-- custom html -->
+          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </div>
+         <div class="clearfix grpelem" id="u2287-7"><!-- content -->
+          <p>&nbsp;</p>
+          <p id="u2287-3"><span class="T-tulos" id="u2287-2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Video 1</span></p>
+          <p id="u2287-4">&nbsp;</p>
+          <p id="u2287-5">&nbsp;</p>
+         </div>
+         <div class="grpelem" id="u2290"><!-- custom html -->
+          <iframe allowfullscreen="" frameborder="0" height="480" src="https://www.youtube.com/embed/PVe-Q2w3-WQ" width="690"></iframe>
+         </div>
+         <div class="clearfix grpelem" id="u2294-4"><!-- content -->
+          <p id="u2294-2"><span class="referencia" id="u2294">MiHolaMundo (2015, junio 2). Como guardar, mostrar, modificar y eliminar datos de MySQL desde php parte 1[Archivo de video]. Recuperado de https://www.youtube.com/watch?v=PVe-Q2w3-WQ</span></p>
+         </div>
+        </div>
        </div>
       </div>
      </div>
@@ -91,8 +107,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="browser_width grpelem" id="u2297-bw">
+     <div id="u2297"><!-- column -->
+      <div class="clearfix" id="u2297_align_to_page">
+       <div class="colelem" id="u2300"><!-- custom html -->
+        <iframe allowfullscreen="" frameborder="0" height="480" src="https://www.youtube.com/embed/nstMUcmBfBE" width="690"></iframe>
+       </div>
+       <div class="clearfix colelem" id="u2301-4"><!-- content -->
+        <p id="u2301-2"><span class="referencia" id="u2301">MiHolaMundo (2015, junio 2). Como guardar, mostrar, modificar y eliminar datos de MySQL desde php parte 2[Archivo de video]. Recuperado de https://www.youtube.com/watch?v=PVe-Q2w3-WQ</span></p>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="clearfix grpelem" id="u2308-5"><!-- content -->
+     <p id="u2308-2"><span class="T-tulos" id="u2308">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Video 2</span></p>
+     <p>&nbsp;</p>
+    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="1394" data-content-above-spacer="1394" data-content-below-spacer="116"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
