--- a/video-1.html
+++ b/video-1.html
@@ -82,8 +82,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1117" href="multimedia.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1119-4"><!-- content --><p>Multimedia</p></div><div class="grpelem" id="u1118"><!-- content --></div></a>
          <div class="SubMenu MenuLevel1 clearfix" id="u1121"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u1122"><!-- vertical box -->
-           <li class="MenuItemContainer clearfix colelem" id="u1130"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1131"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1132-4"><!-- content --><p>Video 1</p></div></div></li>
-           <li class="MenuItemContainer clearfix colelem" id="u1123"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1126"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1129-4"><!-- content --><p>Video 2</p></div></div></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1130"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u1131" href="video-1.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1132-4"><!-- content --><p>Video 1</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u1123"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u1126" href="video-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1129-4"><!-- content --><p>Video 2</p></div></a></li>
           </ul>
          </div>
         </div>
