--- a/autores.html
+++ b/autores.html
@@ -10,14 +10,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "autores.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "webpro.js", "musewpdisclosure.js", "autores.css"], "outOfDate":[]};
 </script>
   
+  <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
   <title>Autores</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
-  <link rel="stylesheet" type="text/css" href="css/autores.css?crc=33467170" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
+  <link rel="stylesheet" type="text/css" href="css/autores.css?crc=4275923592" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +38,36 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="colelem" id="u1731"><!-- custom html -->
-        <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+       <div class="clearfix colelem" id="ppu1731"><!-- group -->
+        <div class="clearfix grpelem" id="pu1731"><!-- column -->
+         <div class="colelem" id="u1731"><!-- custom html -->
+          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </div>
+         <div class="clearfix colelem" id="pu2394"><!-- group -->
+          <div class="clearfix grpelem" id="u2394"><!-- group -->
+           <div class="clearfix grpelem" id="u2391-4"><!-- content -->
+            <p id="u2391-2"><span class="subtitulos" id="u2391">Total de Visitas</span></p>
+           </div>
+          </div>
+          <div class="grpelem" id="u2387"><!-- custom html -->
+           <div id="sfc38xhp8149czy6syfhz4sef9f7fwhn9xd"></div>
+<script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=38xhp8149czy6syfhz4sef9f7fwhn9xd&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=38xhp8149czy6syfhz4sef9f7fwhn9xd" border="0" title="contador para blogger" alt="contador para blogger"></a></noscript>
+          </div>
+         </div>
+        </div>
+        <div class="clearfix grpelem" id="u2449-8"><!-- content -->
+         <p>&nbsp;</p>
+         <p id="u2449-2">&nbsp;</p>
+         <p id="u2449-3">&nbsp;</p>
+         <p id="u2449-4">&nbsp;</p>
+         <p id="u2449-5">&nbsp;</p>
+         <p id="u2449-6">&nbsp;</p>
+        </div>
+        <ul class="AccordionWidget clearfix grpelem" id="accordionu2452"><!-- vertical box -->
+         <li class="AccordionPanel clearfix colelem" id="u2453"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem" id="u2454-4"><!-- content --><p id="u2454-2"><span class="T-tulos" id="u2454">Autores:</span></p></div><div class="AccordionPanelContent disn clearfix colelem" id="u2455"><!-- group --><div class="clearfix grpelem" id="u2456-15"><!-- content --><p id="u2456">&nbsp;</p><p id="u2456-2">&nbsp;</p><p id="u2456-4"><span class="subtitulos" id="u2456-3">Nombre:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mauricio Berrio Franco</span></p><p id="u2456-6"><span class="subtitulos" id="u2456-5">Código:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 18493284</span></p><p id="u2456-8"><span class="subtitulos" id="u2456-7">Programa:&nbsp;&nbsp;&nbsp; Ingeniería de Sistemas</span></p><p id="u2456-10"><span class="subtitulos" id="u2456-9">e-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; mabefra@gmail.com</span></p><p id="u2456-12"><span class="subtitulos" id="u2456-11">Skype:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; maobefra</span></p><p id="u2456-13">&nbsp;</p></div></div></li>
+         <li class="AccordionPanel clearfix colelem" id="u2461"><!-- vertical box --><div class="AccordionPanelTab clearfix colelem" id="u2462-4"><!-- content --><p>Fotos</p></div><div class="AccordionPanelContent clearfix colelem" id="u2463"><!-- group --><div class="grpelem" id="u2491"><!-- simple frame --></div></div></li>
+        </ul>
        </div>
       </div>
      </div>
@@ -92,7 +121,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="777" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
@@ -127,13 +156,14 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","musewpdisclosure","jquery.watch","jquery.musemenu"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#accordionu2452', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:1}); });/* #accordionu2452 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
