--- a/lectura-2.html
+++ b/lectura-2.html
@@ -13,11 +13,12 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "lectura-2.css"], "outOfDate":[]};
 </script>
   
+  <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
   <title>Lectura 2</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
-  <link rel="stylesheet" type="text/css" href="css/lectura-2.css?crc=523976952" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
+  <link rel="stylesheet" type="text/css" href="css/lectura-2.css?crc=284429937" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -60,8 +61,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u2163-30">&nbsp;</p>
          <p id="u2163-32"><span class="contenido" id="u2163-31">Romano, J. M. G. (2011). Desarrollo de sitios web con PHP y MySQL. Recuperado de: http://www.lsi.us.es/cursos/cursophp/apuntes/tema4.pdf</span></p>
         </div>
-        <div class="grpelem" id="u1731"><!-- custom html -->
-         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="clearfix grpelem" id="pu1731"><!-- column -->
+         <div class="colelem" id="u1731"><!-- custom html -->
+          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </div>
+         <div class="clearfix colelem" id="pu2394"><!-- group -->
+          <div class="clearfix grpelem" id="u2394"><!-- group -->
+           <div class="clearfix grpelem" id="u2391-4"><!-- content -->
+            <p id="u2391-2"><span class="subtitulos" id="u2391">Total de Visitas</span></p>
+           </div>
+          </div>
+          <div class="grpelem" id="u2387"><!-- custom html -->
+           <div id="sfc38xhp8149czy6syfhz4sef9f7fwhn9xd"></div>
+<script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=38xhp8149czy6syfhz4sef9f7fwhn9xd&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=38xhp8149czy6syfhz4sef9f7fwhn9xd" border="0" title="contador para blogger" alt="contador para blogger"></a></noscript>
+          </div>
+         </div>
         </div>
        </div>
       </div>
