--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
+  <link rel="shortcut icon" href="images/favicon.ico?crc=4123430645"/>
   <title>Conexión Base de Datos con PHP</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4038311247"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=3946745722"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=518552574" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=376882466"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=359596766" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,8 +38,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p>ECBTI</p>
         </div>
        </div>
-       <div class="clearfix colelem" id="pu1964-30"><!-- group -->
-        <div class="clearfix grpelem" id="u1964-30"><!-- content -->
+       <div class="clearfix colelem" id="ppu1731"><!-- group -->
+        <div class="clearfix grpelem" id="pu1731"><!-- column -->
+         <div class="colelem" id="u1731"><!-- custom html -->
+          <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </div>
+         <div class="clearfix colelem" id="pu2394"><!-- group -->
+          <div class="clearfix grpelem" id="u2394"><!-- group -->
+           <div class="clearfix grpelem" id="u2391-4"><!-- content -->
+            <p id="u2391-2"><span class="subtitulos" id="u2391">Total de Visitas</span></p>
+           </div>
+          </div>
+          <div class="grpelem" id="u2387"><!-- custom html -->
+           <div id="sfc38xhp8149czy6syfhz4sef9f7fwhn9xd"></div>
+<script type="text/javascript" src="https://counter8.freecounter.ovh/private/counter.js?c=38xhp8149czy6syfhz4sef9f7fwhn9xd&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=38xhp8149czy6syfhz4sef9f7fwhn9xd" border="0" title="contador para blogger" alt="contador para blogger"></a></noscript>
+          </div>
+         </div>
+        </div>
+        <div class="clearfix grpelem" id="u1964-19"><!-- content -->
          <p>&nbsp;</p>
          <p id="u1964-3"><span class="T-tulos" id="u1964-2">Conexión Bases de Datos con PHP</span></p>
          <p id="u1964-4">&nbsp;</p>
@@ -50,17 +68,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u1964-13">&nbsp;</p>
          <p id="u1964-15"><span class="subtitulos" id="u1964-14">Objetivos Específicos</span></p>
          <p id="u1964-16">&nbsp;</p>
-         <p id="u1964-18"><span class="contenido" id="u1964-17">Orientar al estudiante sobre las diferentes consultas en la BD que se pueden hacer a través de la página web.</span></p>
-         <p id="u1964-20"><span class="contenido" id="u1964-19">Orientar al estudiante sobre las modificaciones de los registros en la BD a través de la página web.</span></p>
-         <p id="u1964-22"><span class="contenido" id="u1964-21">Orientar al estudiante sobre el borrado de registros en la BD de datos sin alterar la información.</span></p>
-         <p id="u1964-23">&nbsp;</p>
-         <p id="u1964-25"><span class="subtitulos" id="u1964-24">Contenidos:</span></p>
-         <p id="u1964-26">&nbsp;</p>
-         <p id="u1964-28"><span class="contenido" id="u1964-27">En las siguiente secciones tendremos lecturas que les ayudarán durante el desarrollo de las actividades, como también se presentarán ayudas en formatos de vídeo, con el objetivo de brindarles las herramientas necesarias para abordar las temáticas del curso y puedan llegar a desarrollar todas las actividades propuestas.</span></p>
+         <p id="u1964-17">&nbsp;</p>
         </div>
-        <div class="grpelem" id="u1731"><!-- custom html -->
-         <a class="twitter-timeline" data-width="280" data-height="400" data-theme="dark" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="clip_frame grpelem" id="u2372"><!-- image -->
+         <img class="block" id="u2372_img" src="images/imagen%20pegada%20850x678.jpg?crc=4095532050" alt="" width="461" height="368"/>
         </div>
+        <div class="clearfix grpelem" id="u2381-14"><!-- content -->
+         <p id="u2381-2"><span class="contenido" id="u2381">Orientar al estudiante sobre las diferentes consultas en la BD que se pueden hacer a través de la página web.</span></p>
+         <p id="u2381-4"><span class="contenido" id="u2381-3">Orientar al estudiante sobre las modificaciones de los registros en la BD a través de la página web.</span></p>
+         <p id="u2381-6"><span class="contenido" id="u2381-5">Orientar al estudiante sobre el borrado de registros en la BD de datos sin alterar la información.</span></p>
+         <p id="u2381-7">&nbsp;</p>
+         <p id="u2381-9"><span class="subtitulos" id="u2381-8">Contenidos:</span></p>
+         <p>&nbsp;</p>
+         <p id="u2381-12"><span class="contenido" id="u2381-11">En las siguiente secciones tendremos lecturas que les ayudarán durante el desarrollo de las actividades, como también se presentarán ayudas en formatos de vídeo, con el objetivo de brindarles las herramientas necesarias para abordar las temáticas del curso y puedan llegar a desarrollar todas las actividades propuestas.</span></p>
+        </div>
+       </div>
+       <div class="clearfix colelem" id="u2384-4"><!-- content -->
+        <p id="u2384-2"><span class="referencia" id="u2384">Imagen PHP. grupodesi (2017) Diplomato de PHP. Recuperado de: http://www.grupocodesi.com/cursos/diplomado-php.html</span></p>
        </div>
       </div>
      </div>
@@ -114,7 +138,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="758" data-content-above-spacer="816" data-content-below-spacer="115"></div>
+   <div class="verticalspacer" data-offset-top="811" data-content-above-spacer="816" data-content-below-spacer="115"></div>
    <div class="browser_width grpelem" id="u1489-bw">
     <div id="u1489"><!-- group -->
      <div class="clearfix" id="u1489_align_to_page">
